# Open-Xml-PowerTools

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  ANALYSIS_ATOM_CORRELATION_PIPELINE.md  CONSOLIDATION_INTEGRATION_REPORT.md  Dockerfile  Dockerfile.componentize  Dockerfile.wasi  OpenXmlPowerTools.sln  README.md  RUST_MIGRATION_PLAN_SYNTHESIS.md  TEXTBOX_FIX_PLAN.md  TYPESCRIPT_PORT_PLAN.md  compare.sh  comparison-result.docx  generate-golden.sh  run-tests.sh
.beads/: beads.db  beads.db-shm  beads.db-wal  beads.left.jsonl  beads.left.meta.json  issues.jsonl
.hive/: issues.jsonl
Docs/: SmlComparer.md
GoldenFileGenerator/: GoldenFileGenerator.csproj  Program.cs
OpenXmlPowerTools/: DocumentBuilder.cs  HtmlToWmlConverterCore.cs  MetricsGetter.cs  OpenXmlPowerTools.csproj  PmlComparer.cs  PresentationBuilder.cs  PtOpenXmlDocument.cs  PtOpenXmlUtil.cs  PtUtil.cs  RevisionProcessor.cs  SmlCellFormatter.cs  (+3 more)
OpenXmlPowerTools.CLI/: OpenXmlPowerTools.CLI.csproj  Program.cs
OpenXmlPowerTools.Packaging/: IDocumentPart.cs  OpenXmlPowerTools.Packaging.csproj  SharpCompressPackage.cs  SharpCompressPackageFeature.cs  SharpCompressPackageProperties.cs  SharpCompressPart.cs  SharpCompressRelationshipCollection.cs  WasiComparer.cs  WasiDocument.cs
OpenXmlPowerTools.Packaging.Tests/: OpenXmlPowerTools.Packaging.Tests.csproj  SharpCompressPackageTests.cs  WasiDocumentTests.cs
OpenXmlPowerTools.Tests/: FormattingChangeTests.cs  OpenXmlPowerTools.Tests.csproj  PmlComparerTestFileGenerator.cs  PmlComparerTests.cs  PowerToolsBlockExtensionsTests.cs  SmlCellFormatterTests.cs  SmlComparerTests.cs  SmlToHtmlConverterTests.cs  SpreadsheetWriterTests.cs  WmlComparerTests.cs  WmlComparerTests2.cs
OpenXmlPowerTools.Wasi/: OpenXmlPowerTools.Wasi.csproj  OpenXmlPowerTools.Wasi.csproj.componentize  Program.cs  README.md
redline-rs/: Cargo.toml  INVESTIGATION_FINDINGS.md  README.md
redline-rs/.hive/: issues.jsonl
redline-rs/benches/: comparison_bench.rs
redline-rs/crates/redline-cli/: Cargo.toml  README.md  build.rs
redline-rs/crates/redline-cli/src/: main.rs
redline-rs/crates/redline-core/: Cargo.toml
redline-rs/crates/redline-core/benches/: comparison_bench.rs  profile_pml.rs  profile_sml.rs  profile_wml.rs  wml_benchmark.rs
redline-rs/crates/redline-core/docs/: VISUAL_REDLINE.md
redline-rs/crates/redline-core/src/: error.rs  lib.rs  types.rs
redline-rs/crates/redline-core/src/hash/: mod.rs  sha1.rs  sha256.rs
redline-rs/crates/redline-core/src/package/: content_types.rs  mod.rs  ooxml.rs  parts.rs  relationships.rs
redline-rs/crates/redline-core/src/pml/: canonicalize.rs  change_list.rs  comparer.rs  diff.rs  document.rs  markup.rs  mod.rs  patch.rs  result.rs  settings.rs  shape_match.rs  slide_matching.rs  types.rs
redline-rs/crates/redline-core/src/sml/: canonicalize.rs  change_list.rs  comparer.rs  data_retriever.rs  diff.rs  document.rs  markup.rs  mod.rs  patch.rs  result.rs  settings.rs  signatures.rs  types.rs
redline-rs/crates/redline-core/src/util/: culture.rs  descendants.rs  group.rs  lcs.rs  mod.rs  strings.rs
redline-rs/crates/redline-core/src/wml/: atom_list.rs  block_hash.rs  change_event.rs  change_list.rs  coalesce.rs  comments.rs  comparer.rs  comparison_unit.rs  consolidate.rs  document.rs  drawing_identity.rs  extract_changes.rs  formatting.rs  get_revisions.rs  lcs_algorithm.rs  mod.rs  order.rs  preprocess.rs  repro_test.rs  revision.rs  revision_accepter.rs  revision_processor.rs  settings.rs  simplify.rs  types.rs  visual_redline.rs
redline-rs/crates/redline-core/src/xml/: arena.rs  builder.rs  mod.rs  namespaces.rs  node.rs  parser.rs  xname.rs
redline-rs/crates/redline-core/tests/: ooxml_validation_tests.rs  pml_tests.rs  sml_changes_tests.rs  sml_patch_tests.rs  sml_tests.rs  wml_changes_tests.rs  wml_tests.rs
redline-rs/crates/redline-tauri/: Cargo.toml
redline-rs/crates/redline-tauri/src/: lib.rs
redline-rs/crates/redline-wasm/: Cargo.toml  DEPLOYMENT.md  README.md  build.sh  setup_demo.sh
redline-rs/crates/redline-wasm/demo/: README.md  app.js  index.html  style.css
redline-rs/crates/redline-wasm/src/: lib.rs
redline-rs/tests/common/: mod.rs  normalizer.rs  validator.rs
redline-rs/tests/golden/: hash_vectors.json  manifest.json  pml  wml
redline-rs/tools/: README.md  extract_section.py  trace_lcs.py
(+332 files in other folders)
