[workspace]
resolver = "2"
members = [
    "crates/redline-core",
    "crates/redline-wasm",
    "crates/redline-tauri",
    "crates/redline-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["OpenXML PowerTools Contributors"]
repository = "https://github.com/example/redline-rs"

[workspace.dependencies]
# XML parsing and manipulation
roxmltree = "0.20"
quick-xml = { version = "0.37", features = ["serialize"] }
indextree = "4.7"

# ZIP handling (WASM-compatible)
zip = { version = "2.2", default-features = false, features = ["deflate"] }

# Cryptographic hashing
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"

# Internationalization (culture-sensitive operations)
icu = "1.5"
icu_provider = "1.5"

# Error handling
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Fast character search (SIMD)
memchr = "2.7"

# Lazy initialization
once_cell = "1.19"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation (for UNID matching C# Guid.NewGuid())
uuid = { version = "1.10", features = ["v4", "js"] }

# Dev dependencies
insta = { version = "1.41", features = ["json"] }
pretty_assertions = "1.4"
criterion = "0.5"
proptest = "1.4"
regex = "1.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.release-wasm]
inherits = "release"
opt-level = "s"  # Optimize for size
