[package]
name = "redline-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tauri plugin for redline-core OOXML comparison engine"

[dependencies]
redline-core = { path = "../redline-core" }
tauri = "2.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["fs"] }
