[package]
name = "redline-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for redline-core OOXML comparison engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
redline-core = { path = "../redline-core", features = ["wasm"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
